RESOLVED FIXED70943
WebKit2 should respect WebKitOmitPDFSupport preference on the Mac
https://bugs.webkit.org/show_bug.cgi?id=70943
Summary WebKit2 should respect WebKitOmitPDFSupport preference on the Mac
Jeff Miller
Reported 2011-10-26 10:52:51 PDT
This is a regression from WebKit1.
Attachments
Patch (3.31 KB, patch)
2011-10-26 10:58 PDT, Jeff Miller
ap: review+
Jeff Miller
Comment 1 2011-10-26 10:53:05 PDT
<rdar://problem/10333309> REGRESSION: WebKitOmitPDFSupport default lost in WebKit2
Jeff Miller
Comment 2 2011-10-26 10:58:14 PDT
Alexey Proskuryakov
Comment 3 2011-10-26 11:32:13 PDT
Comment on attachment 112565 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=112565&action=review > Source/WebKit2/ChangeLog:6 > + Don't register built-in PDF plugin if WebKitOmitPDFSupport pref is set. This explanation is slightly misleading, as the patch disables both the new "plug-in" for subframes and the PDFKit-based support for main frame only.
Jeff Miller
Comment 4 2011-10-26 13:19:26 PDT
Alexey Proskuryakov
Comment 5 2011-10-28 14:53:57 PDT
There is also PDF code in WebContext::platformInitializeWebProcess. Should that be conditional, too?
Jeff Miller
Comment 6 2011-10-28 15:59:12 PDT
(In reply to comment #5) > There is also PDF code in WebContext::platformInitializeWebProcess. Should that be conditional, too? Probably, although PDF viewing seems to be disabled with just r98513. I'll file another bug to fix this.
Jeff Miller
Comment 7 2011-10-28 16:04:35 PDT
(In reply to comment #6) > (In reply to comment #5) > > There is also PDF code in WebContext::platformInitializeWebProcess. Should that be conditional, too? > > Probably, although PDF viewing seems to be disabled with just r98513. I'll file another bug to fix this. Tracked by bug 71156.
Note You need to log in before you can comment on or make changes to this bug.